Removes pointer-event on disabled datagrid rows

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -1445,6 +1445,7 @@ $datagrid-short-row-height: 25px;
 
     &.is-rowdisabled {
       opacity: 0.6;
+      pointer-events: none;
 
       td {
         &:hover {
